components/AudioPlayer/AudioPlayer.module.css
.audioplayer_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 3rem auto;
}

.audio {
    border: solid 3px var(--color-bluegrey);
    border-radius: 30px;
    /* added this line */
    padding: 2rem;
    background-color: var(--color-dark);
    min-width: 880px;
    max-width: 880px;
    box-shadow: 10px 10px 20px 4px rgba(0, 0, 0, 0.2);
}

.subroutinebomb {
    margin-top: -9px;
    width: 300px;
    height: auto;
}

.songlistcol {
    order: 1;
    min-width: 220px;
    max-width: 220px;
    /* min-width: 260px; */
    /* border: solid white; */
    /* max-width: 200px; */
    /* text-align: right; */
    /* border: solid white; */
}

.songlistheader {
    height: 45px;
    position: relative;
    color: var(--color-bluegrey);
}

.songlistheaderinner {
    font-size: large;
    font-weight: bold;
    position: absolute;
    bottom: 0;
    /* right: 0; */
}

.songlist {
    padding-top: 10px;
    border-top: dotted 1px var(--color-light);
}

.songListItem span {
    cursor: pointer;
    color: var(--color-darkgrey);
}

.songListItemSelected span {
    cursor: pointer;
    color: var(--color-light);
}

.songListItem:hover {
    border: solid 1px;
}

.playercol {
    order: 2;
    min-width: 330px
}

.imagecol {
    order: 3;
    display: flex;
    /* justify-content: center;
    align-items: center; */
    /* min-width: 220px; */
    /* border: solid grey 1px; */
}

.audio .songimage {
    width: 230px;
    height: auto;
    margin-top: 25px;
    margin-bottom: 20px;
    border: solid 1px var(--color-light);
    border-radius: 5px;
    box-shadow: 5px 5px 5px rgba(218, 145, 0, 0.5);
}

.playerheader {
    display: flex;
    align-items: center;
    margin-bottom: -10px;
}

.controlbtns {
    margin-top: 8px;
    margin-left: 18px;
    width: 20px;
}

.controlbtns .playbtn {
    color: var(--color-bluegrey);
}

.circleplay {
    color: var(--color-bluegrey);
    height: 12px;
    margin-bottom: 2px;
}

.controlbtns .pausebtn {
    color: var(--color-dustyorange);
}

.displaytext {
    margin-left: 10px;
    font-size: 30px;
    font-family: 'Moirai One', 'Courier New', Courier, monospace;
    color: var(--color-light);
}

.progressBar progress {
    /* margin-top: -20px; */
    min-width: 300px;
    color: var(--color-uppermiddle);
}

@media only screen and (min-device-width: 200px) and (max-device-width: 844px) and (-webkit-min-device-pixel-ratio: 2) {
    .audioplayer_container {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 1rem;
    }
    .audio {
        min-width: 360px;
        max-width: 360px;
    }
    .subroutinebomb {
        width: 100px;
        margin-left: 20%;
    }
    .songlistcol {
        order: 2;
        min-width: 220px;
        max-width: 220px;
    }
    .songlistheaderinner {
        font-size: medium;
    }
    .playercol {
        order: 1;
    }
    .imagecol {
        order: 3;
    }
    .audio .songimage {
        width: 280px;
    }
    .controlbtns {
        margin-top: 8px;
        margin-left: 18px;
        width: 20px;
    }
    .displaytext {
        margin: 0 0 5px 5px;
        font-size: 22px;
        font-family: Verdana, Geneva, Tahoma, sans-serif;
        font-weight: bold;
    }
    .progressBar progress {
        min-width: 270px;
    }
}

